--- a/index.html
+++ b/index.html
@@ -29,20 +29,36 @@
                 </div>
             </div>
 
-            <footer class="footer">
-                <p>
-                    Copyright ©
-                    <script>
-                        document.write(new Date().getFullYear());
-                    </script>
-                    AlyLoutfy
-                </p>
-                <a href="https://github.com/AlyLoutfy" target="_blank">
-                    <i class="fa fa-github"></i>
-                </a>
-            </footer>
-        </div>
+            <div class="add-form">
+                <form action="">
+                    <div id="form-title">Add New Book</div>
+                    <input type="text" name="name" id="name" placeholder="Title" />
 
+                    <input type="text" name="author" id="author" placeholder="Author" />
+
+                    <input type="text" name="pages" id="pages" placeholder="Pages" />
+
+                    <div class="read">
+                        <label for="read">Read</label>
+                        <input type="checkbox" name="read" id="read" />
+                    </div>
+                    <button class="btn" type="submit">Submit</button>
+                </form>
+            </div>
+            <div class="overlay" id="overlay"></div>
+        </div>
+        <footer class="footer">
+            <p>
+                Copyright ©
+                <script>
+                    document.write(new Date().getFullYear());
+                </script>
+                AlyLoutfy
+            </p>
+            <a href="https://github.com/AlyLoutfy" target="_blank">
+                <i class="fa fa-github"></i>
+            </a>
+        </footer>
         <script src="script.js"></script>
     </body>
 </html>
