--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                     <input type="text" name="author" id="author" placeholder="Author" />
 
-                    <input type="text" name="pages" id="pages" placeholder="Pages" />
+                    <input type="number" name="pages" id="pages" placeholder="Pages" />
 
                     <div class="read">
                         <label for="read">Read</label>
