Manual test cards

--- a/index.html
+++ b/index.html
@@ -29,6 +29,27 @@
                 </div>
             </div>
 
+            <div class="book-cards">
+                <div class="card">
+                    <div class="title">Harry Potter</div>
+                    <div class="author">J.K.</div>
+                    <div class="pages">594 pages</div>
+                    <div class="read">
+                        <label for="read">Read?</label>
+                        <input type="checkbox" name="read" id="toggle" />
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="title">Harry Potter</div>
+                    <div class="author">J.K.</div>
+                    <div class="pages">594 pages</div>
+                    <div class="read">
+                        <label for="read">Read?</label>
+                        <input type="checkbox" name="read" id="toggle" />
+                    </div>
+                </div>
+            </div>
             <div class="add-form">
                 <form action="">
                     <div id="form-title">Add New Book</div>
