--- a/index.html
+++ b/index.html
@@ -29,29 +29,9 @@
                 </div>
             </div>
 
-            <div class="book-cards">
-                <div class="card">
-                    <div class="title">Harry Potter</div>
-                    <div class="author">J.K.</div>
-                    <div class="pages">594 pages</div>
-                    <div class="read">
-                        <label for="read">Read?</label>
-                        <input type="checkbox" name="read" id="toggle" />
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="title">Harry Potter</div>
-                    <div class="author">J.K.</div>
-                    <div class="pages">594 pages</div>
-                    <div class="read">
-                        <label for="read">Read?</label>
-                        <input type="checkbox" name="read" id="toggle" />
-                    </div>
-                </div>
-            </div>
+            <div class="book-cards"></div>
             <div class="add-form">
-                <form action="">
+                <form>
                     <div id="form-title">Add New Book</div>
                     <input type="text" name="name" id="name" placeholder="Title" />
 
